<resources>
    <string name="app_name">Органайзер</string>
    <string name="btn_text_to_current_date">Открыть ежедневник\nна выбранную дату</string>
    <string name="btn_text_to_notes">заметки</string>
    <string name="btn_text_to_finance">финансы</string>
    <string name="btn_text_to_mood">mood</string>
    <string name="btn_text_to_wish_list">wish list</string>
    <string name="btn_text_to_diary">дневник</string>
    <string name="btn_text_to_habits">трекер</string>
    <string name="btn_text_create_directory">создать папку</string>
    <string name="btn_text_commit_note">Готово</string>
    <string name="btn_text_create_note">Создать заметку</string>
    <string name="btn_text_to_leaveReview">Оставить отзыв</string>
    <string name="btn_text_write_to_support">Написать в поддержку</string>
    <string name="btn_text_change_email">Сменить адрес электронной почты</string>
    <string name="btn_text_change_password">Забыл пароль</string>
    <string name="btn_text_reset_password">Восстановить пароль</string>
    <string name="btn_text_create_project">Создать проект</string>
    <string name="btn_text_create_income">ввести данные</string>
    <string name="btn_text_create_outcome">ввести данные</string>
    <string name="input_directory_name">Введите название папки</string>
    <string name="directory_name_hint">Введите название папки</string>
    <string name="wish_name_hint">Введите название желания</string>
    <string name="btn_text_directory_commit">Подтвердить название</string>
    <string name="label_project">Проект</string>
    <string name="label_wish">Спискок желаний</string>
    <string name="label_back">Назад</string>
    <string name="label_notes">Заметки</string>
    <string name="label_create_note">Введите название заметки</string>
    <string name="label_input_email">Введите привязанный адрес электронной почты</string>
    <string name="label_income_per_month">Доходы в месяц</string>
    <string name="label_income_name">Введите название дохода</string>
    <string name="label_outcome_name">Название расхода</string>
    <string name="hint_income_name">Полученная прибыль</string>
    <string name="hint_outcome_name">Сумма расхода</string>
    <string name="create_wish">Создать желание</string>
    <string name="wellcome">Добро пожаловать в ежедневник </string>
    <string name="star_ic_content_description">Иконка звезды для заметок</string>
    <string name="triple_star_ic_content_description">Иконка звезды для настроек</string>
    <string name="go_to_main_ic_content_description">Иконка кнопки к главному фрагменту</string>
    <string name="go_back_ic_content_description">Иконка кнопки назад</string>
    <string name="dir_name">Заметки / </string>
    <string name="diary">diary</string>
    <string name="time_management">time\nmanagement</string>
    <string name="text_plans">Планы — это мечты знающих людей.\nЭрнст Фейхтерслебен</string>
    <string name="text_registration">Регистрация</string>
    <string name="input_name">Введите имя</string>
    <string name="input_email">Введите адрес электронной почты</string>
    <string name="input_password">Придумайте пароль</string>
    <string name="create_acc">Создать аккаунт</string>
    <string name="message">На указанный почтовый адрес было\nвыслано письмо с подтверждением,\nзавершите регистрацию, подтвердив\nэлектронный адрес :)</string>
    <string name="verification">На указанный почтовый адрес было\nвыслано письмо с подтверждением,\nзавершите смену почты, подтвердив\nэлектронный адрес :)</string>
    <string name="btn_enter">Войти</string>
    <string name="label_enter">Войдите в приложение</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="btn_registration_text">Регистрация</string>
    <string name="label_settings">Настройки</string>
    <string name="user_photo">Аватар пользователя</string>
    <string name="btn_exit">Выйти из аккаунта</string>
    <string name="text_btn_to_main">Вернуться на главную</string>
    <string name="text_btn_to_settings">Перейти к настройкам</string>
    <string name="label_text_email">Введите email</string>
    <string name="label_text_password">Введите пароль</string>

    <!--  Into code  -->
    <string name="email_error">Электронная почта указана в неверном формате</string>
    <string name="password_length_error">Пароль должен содержать не менее 8 символов</string>
    <string name="password_up_low_error">Пароль должен содержать как минимум одну заглавную и одну строчную буквы</string>
    <string name="password_lang_error">Пароль должен состоять из букв английского алфавита</string>
    <string name="email_already_exist">Учетная запись с такой электронной почтой уже существует</string>

    <string name="alert_dialog_title">Верификация аккаунта</string>
    <string name="alert_dialog_message">Вы не подтвердили адрес электронной почты.\nЕсли сообщение не пришло, проверьте папку спам</string>
    <string name="alert_dialog_positive">OK</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_change_password">Смена пароля</string>
    <string name="label_change_email">Смена электронного адреса</string>
    <string name="label_input_new_email">Введите новый адрес электронной почты</string>
    <string name="label_re_auth">Подтвердите свои данные</string>
    <string name="password_error">Поле должно быть заполнено</string>
    <string name="label_finance">Финансы</string>
    <string name="label_outcome_per_month">Расходы в месяц</string>
    <string name="slash">/</string>
    <string name="symbol">₽</string>
    <string name="label_pillow">Чистая прибыль:</string>
    <string name="label_collect_name">Введите сумму накопления</string>
    <string name="label_total_income">Заработано всего:</string>
    <string name="label_total_outcome">Потрачено всего:</string>
    <string name="enter_directory_name">Введите название новой папки</string>
    <string name="enter_project_name">Введите название своего проекта</string>
    <string name="label_create_directory">Создание папки</string>
    <string name="label_create_project">Создание проекта</string>
    <string name="project_name_hint">Введите название проекта</string>
    <string name="btn_text_to_analise_in_out">Анализ расходов/доходов</string>
    <string name="btn_text_to_check_before">Посмотреть \nпредыдущие месяца</string>
    <string name="label_finance_month">Финансы / предыдущие месяца</string>
    <string name="auth_error">Вход не удался</string>
    <string name="btn_text_ok">Ок</string>
    <string name="btn_text_go_back">Назад</string>
    <string name="input_data">Введите данные</string>
    <string name="doesnt_send">Сообщение не было отправлено</string>
    <string name="alert_dialog_password_message">На указанный адрес электронной почты было\nотправлено сообщение с инструкцией для\nвосстановления пароля.\nЕсли сообщение не пришло, проверьте папку спам.</string>
    <string name="alert_dialog_password_message_reset">На указанный адрес электронной почты будет\nотправлено сообщение с инструкцией для\nвосстановления пароля.\nЕсли сообщение не придёт, проверьте папку спам.</string>
    <string name="email_doesnt_exist">Указанный email не сущесвует</string>
    <string name="text_commit_reset">Вы уверены что хотите восстановить пароль?</string>
    <string name="btn_text_no">Нет</string>
    <string name="btn_text_yes">Да</string>
    <string name="label_aim">Сколько надо накопить:</string>
    <string name="input_aim">Введите сумму накопеления</string>
    <string name="input_number">Введите число в поле накопления</string>
    <string name="accumulated">Вы накопили!</string>
    <string name="input_income_name">Введите название дохода</string>
    <string name="input_income_ammount">Введите сумму дохода в поле доходов</string>
    <string name="input_outcome_name">Введите название расхода</string>
    <string name="input_outcome_ammount">Введите сумму расхода в поле расходов</string>
    <string name="label_delete">Вы точно хотите удалить выбранный элемент?</string>
    <string name="label_delete_question">Удаление элемента</string>
    <string name="text_delete_income">Удаление дохода</string>
    <string name="text_delete_outcome">Удаление расхода</string>
    <string name="label_income">Доходы:</string>
    <string name="label_outcome">Расходы:</string>
    <string name="label_finance_analise">Анализ расходов /  доходов</string>
    <string name="text_to_main">на главную</string>
    <string name="label_personal_affairs">Личные дела</string>
    <string name="label_work">Работа</string>
    <string name="label_time_event">Событие по времени</string>
    <string name="label_habits_tracker">Трекер привычек</string>
    <string name="btn_text_create">создать</string>
    <string name="label_create_task">Создать задачу</string>
    <string name="text_add_name">Добавить название</string>
    <string name="text_task_description">Описание задачи</string>
    <string name="text_task_date">Дата</string>
    <string name="text_task_repeat">Повторить</string>
    <string name="radio_button_text_never">Никогда</string>
    <string name="radio_button_text_every_day">Ежедневно</string>
    <string name="radio_button_text_every_week">Еженедельно</string>
    <string name="radio_button_text_every_month">Ежемесячно</string>
    <string name="text_task_notification">Оповещение</string>
    <string name="text_task_priority">Приоритет</string>
    <string name="btn_text_go_back_task">назад</string>
    <string name="input_task_name">Введите название задачи</string>
    <string name="input_task_content">Введите содержание задачи</string>
    <string name="label_delete_task_question">Удаление задачи</string>
    <string name="text_delete_personal">Удаление личной задачи</string>
    <string name="text_delete_work">Удаление рабочей задачи</string>
    <string name="label_delete_directory_question">Удаление папки</string>
    <string name="input_project_name">Введите название своего проекта</string>
    <string name="input_note_content">Введите содержание заметки</string>
    <string name="label_delete_project_question">Удаление проекта</string>
    <string name="label_delete_note_question">Удаление заметки</string>
    <string name="label_time_notification">Напоминание задачи в</string>
    <string name="channel_name">Alarm</string>
    <string name="channel_description">Alarm notification</string>
    <string name="enter_time_event">Название события</string>
    <string name="label_delete_time_event_question">Удаление события по времени</string>
    <string name="grant_permission_text">Для корректной работы приложения, вам необходимо предоставить разрешение на показ уведомлений)</string>
    <string name="label_delete_permission">Необходимо разрешение на показ уведомлений</string>
    <string name="btn_text_commit_time">Подтвердить время</string>
    <string name="input_event_name">Введите название события</string>
    <string name="text_btn_go_back">Назад</string>
    <string name="reauth_error">Данные неверны</string>
</resources>