<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_fragment_finance"
    app:cardBackgroundColor="@color/white">

    <ImageButton
        android:id="@+id/btnToSettings"
        style="@style/ButtonToSettings"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/text_btn_to_settings"
        app:layout_constraintBottom_toTopOf="@id/btnToMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_star"
        style="@style/TopStarStyle"
        android:contentDescription="@string/star_ic_content_description"
        app:layout_constraintBottom_toTopOf="@+id/topLine"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nameOfDirectory"
        style="@style/TopLabels"
        android:text="@string/label_finance_analise"
        app:layout_constraintBottom_toTopOf="@id/topLine"
        app:layout_constraintStart_toEndOf="@id/ic_star" />

    <ImageButton
        android:id="@+id/btnGoBack"
        style="@style/ButtonGoBack"
        android:contentDescription="@string/go_back_ic_content_description"
        app:layout_constraintBottom_toTopOf="@id/topLine"
        app:layout_constraintEnd_toStartOf="@id/btnToMain" />

    <ImageButton
        android:id="@+id/btnToMain"
        style="@style/ButtonGoToMain"
        android:contentDescription="@string/go_to_main_ic_content_description"
        app:layout_constraintBottom_toTopOf="@id/topLine"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/topLine"
        style="@style/TopLineBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="20dp"
        android:id="@+id/chartRcView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/topLine"
        app:layout_constraintStart_toStartOf="@id/topLine"
        app:layout_constraintTop_toBottomOf="@+id/topLine"/>

</androidx.constraintlayout.widget.ConstraintLayout>