<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_fragment_settings">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/topLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            style="@style/TopStarStyle"
            android:layout_width="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_triple_star"
            android:contentDescription="@string/triple_star_ic_content_description" />

        <TextView
            android:id="@+id/label"
            style="@style/TopLabels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_settings" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/topLine"
        style="@style/TopLineBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImg"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topLine" />

    <TextView
        android:id="@+id/userName"
        style="@style/TopLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userImg" />

    <TextView
        android:id="@+id/userEmail"
        style="@style/TopLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/helvetica_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/userEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLeaveReview"
            style="@style/ButtonInSettings"
            android:text="@string/btn_text_to_leaveReview"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnWriteToSupport"
            style="@style/ButtonInSettings"
            android:text="@string/btn_text_write_to_support"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChangeEmail"
            style="@style/ButtonInSettings"
            android:text="@string/btn_text_change_email"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChangePassword"
            style="@style/ButtonInSettings"
            android:text="@string/btn_text_change_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnToMain"
            style="@style/ButtonInSettings"
            android:background="@drawable/bg_btn_to_main_setting"
            android:text="@string/text_btn_to_main"
            android:layout_marginBottom="0dp"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogOut"
        style="@style/ButtonsOnRegistrationBlock"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="40dp"
        android:text="@string/btn_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>