<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_fragment_notes">

    <ImageButton
        android:id="@+id/btnToSettings"
        style="@style/ButtonToSettings"
        android:layout_marginBottom="14dp"
        android:contentDescription="@string/text_btn_to_settings"
        app:layout_constraintBottom_toTopOf="@id/btnGoBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_star"
        style="@style/TopStarStyle"
        android:contentDescription="@string/star_ic_content_description"
        app:layout_constraintBottom_toTopOf="@+id/topLine"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nameOfDirectory"
        style="@style/TopLabels"
        android:text="@string/label_notes"
        app:layout_constraintBottom_toTopOf="@id/topLine"
        app:layout_constraintStart_toEndOf="@id/ic_star" />


    <ImageButton
        android:id="@+id/btnGoBack"
        style="@style/ButtonGoBack"
        android:contentDescription="@string/go_back_ic_content_description"
        app:layout_constraintBottom_toTopOf="@id/topLine"
        app:layout_constraintEnd_toStartOf="@id/btnToMain" />

    <ImageButton
        android:id="@+id/btnToMain"
        style="@style/ButtonGoToMain"
        android:contentDescription="@string/go_to_main_ic_content_description"
        app:layout_constraintBottom_toTopOf="@id/topLine"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/topLine"
        style="@style/TopLineBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddProject"
        android:layout_width="0dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:textAlignment="center"
        android:textSize="11sp"
        style="@style/ButtonNoteBg"
        app:layout_constraintStart_toStartOf="@id/topLine"
        android:layout_height="30dp"
        android:layout_marginTop="26dp"
        android:text="@string/btn_text_create_project"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintTop_toBottomOf="@id/topLine" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateNote"
        style="@style/ButtonNoteBg"
        android:layout_width="0dp"
        android:paddingStart="0dp"
        android:layout_height="30dp"
        android:paddingEnd="0dp"
        android:textAlignment="center"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="@id/topLine"
        android:layout_marginStart="10dp"
        android:layout_marginTop="26dp"
        android:text="@string/btn_text_create_note"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintTop_toBottomOf="@id/topLine" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcOpenDirectory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.35"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@id/topLine"
        app:layout_constraintStart_toStartOf="@id/topLine"
        app:layout_constraintTop_toBottomOf="@+id/btnAddProject" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcOpenDirectoryNotes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.35"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@id/rcOpenDirectory"
        app:layout_constraintStart_toStartOf="@id/rcOpenDirectory"
        app:layout_constraintTop_toBottomOf="@+id/rcOpenDirectory" />

</androidx.constraintlayout.widget.ConstraintLayout>